# video-factory

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  README.md  auto_build.py  dev.sh  generate_hotlist10.py  package-lock.json  package.json  pyproject.toml  render_style_previews.py
.nightly/: feature_ideas.md  report_20260617.md  report_20260624.md
assets/templates/: github-trending-screens-v10-sspai.html  github-trending-screens-v2-2-初始设计稿件.html  github-trending-screens-v2.html  hotlist-v2.html  (+5 more)
docs/: DEV_DESIGN.md  PRD.md  api.md  architecture.md  development.md  e2e-manual-checklist.md  modules.md  pipeline-benchmark.md  ui-console-redesign-preview.html
examples/: finance_edu_macd.json
scripts/: benchmark_pipeline.py  render_hotlist_v2.py  render_style_previews.py  voice_preview.py
src/: cli.py  models.py  pipeline.py
tests/: smoke_console_render_job.py  smoke_render_from_plan.py  test_benchmark_pipeline.py  test_bgm.py  test_console_jobs.py  test_console_preflight.py  test_console_providers.py  test_console_scheduler.py  test_console_server_smoke.py  test_console_static_app.js  test_finance_edu_compliance.py  test_finance_edu_models.py  test_finance_edu_pipeline.py  test_finance_edu_storyboard.py  test_github_hotlist.py  test_github_trending.py  test_hotlist_v2_render.py  test_lark_config.py  test_lark_pipeline_integration.py  test_lark_sync.py  test_pipeline_from_plan.py  test_real_e2e_smoke.py  test_stock_hyperframes.py  test_stock_pipeline.py  test_stock_renderer.py  test_stock_shots.py  test_tts_edge.py  test_vertical_composer_cache.py
(+98 files in other folders)
