[project]
name = "github-video-maker"
version = "0.1.0"
description = "AI 驱动的 GitHub 项目介绍视频生成工具"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "playwright>=1.40.0",
    "openai>=1.0.0",
    "edge-tts>=7.0.0",
    "moviepy>=1.0.3",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
github-video = "src.cli:app"
github-video-console = "src.console.__main__:app"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
